--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
 <resources>
     <string name="app_name">Popular Movies</string>
     <string name="sort">Sort</string>
-    <string name="img_size">w185</string>
+    <string name="error">Oops! Data not available right now</string>
     <string-array name="sort_array">
         <item>Sort By Most Popular</item>
         <item>Sort By Top Rated</item>
