--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="app_name">Popular Movies</string>
     <string name="sort">Sort</string>
     <string name="error">Oops! Data not available right now</string>
+    <string name="param">Movie</string>
     <string-array name="sort_array">
         <item>Sort By Most Popular</item>
         <item>Sort By Top Rated</item>
