--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,98 @@
     <string name="app_name">Popular Movies</string>
     <string name="sort">Sort</string>
     <string name="error">Oops! Data not available right now</string>
+    <string name="settings_title">Popular Movie Settings</string>
+    <string name="settings_sort_by_default">Sort By Most Popular</string>
+    <string name="settings_sort_by_label">Sort By</string>
+    <string name="settings_sort_by_key">sort_by</string>
     <string name="param">Movie</string>
     <string-array name="sort_array">
         <item>Sort By Most Popular</item>
         <item>Sort By Top Rated</item>
+        <item>Display Favorites</item>
     </string-array>
+    <string name="coverImg">Cover Image</string>
+    <string name="movieImg">movieImg</string>
+    <string name="plotSynopsis">Overview</string>
+    <string name="popular">Popular</string>
+    <string name="top_rated">Top Rated</string>
+    <string name="no_data">Please check your Internet connection and try again</string>
+    <string name="favorites">Favorites</string>
+    <string name="most_popular_movies">Most Popular Movies</string>
+    <string name="high_rated_movies">Highest-rated Movies</string>
+    <string name="your_favorite_movies">Your Favorite Movies</string>
+    <string name="share_text_for_chooser">Share first trailer link for :</string>
+    <string name="release_date_title">Release Date:</string>
+    <string name="rating_title">Rating:</string>
+    <string name="trailers_title">Trailers:</string>
+    <string name="reviews_title">Reviews:</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">General</string>
+
+    <string name="pref_title_social_recommendations">Enable social recommendations</string>
+    <string name="pref_description_social_recommendations">Recommendations for people to contact
+        based on your message history
+    </string>
+
+    <string name="pref_title_display_name">Display name</string>
+    <string name="pref_default_display_name">John Smith</string>
+
+    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
+    <string-array name="pref_example_list_titles">
+        <item>Always</item>
+        <item>When possible</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_example_list_values">
+        <item>1</item>
+        <item>0</item>
+        <item>-1</item>
+    </string-array>
+
+    <!-- Example settings for Data & Sync -->
+    <string name="pref_header_data_sync">Data &amp; sync</string>
+
+    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+        <item>-1</item>
+    </string-array>
+
+    <string-array name="list_preference_entries">
+        <item>scroll_state</item>
+    </string-array>
+
+    <string-array name="list_preference_entry_values">
+        <item>0</item>
+    </string-array>
+
+    <string-array name="multi_select_list_preference_default_value" />
+
+    <string name="pref_title_system_sync_settings">System sync settings</string>
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifications</string>
+
+    <string name="pref_title_new_message_notifications">New message notifications</string>
+
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibrate</string>
 </resources>
